# benchmark_kdtree

./: .bazelrc  .gitignore  100x100_grid.txt  10x10_grid.txt  BUILD  CMakeLists.txt  MODULE.bazel  QUICKSTART.md  README.md  TECHNICAL.md  grid_results.txt  run_benchmark.sh  visualize_results.py
include/: benchmark_runner.h  grid.h  kdtree.h  point.h  point_generator.h
src/: main.cpp
